Page de connexion et interface

--- a/ApplicationMarcassin/ListViewCategorie.xaml
+++ b/ApplicationMarcassin/ListViewCategorie.xaml
@@ -35,11 +35,14 @@
             </ListView.View>
         </ListView>
         <!--Ajout d'une barre de recherche ex groupe.cs -->
-        <Button x:Name="AddCategorie" Grid.Column="1" Grid.Row="2" HorizontalAlignment="center" Click="AddCategorie_Click" Margin="0 0 150 0" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}">
+        <Button x:Name="AddCategorie" Grid.Column="1" Grid.Row="2" HorizontalAlignment="center" Click="AddCategorie_Click" Margin="0 0 250 0" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}">
             Ajouter
         </Button>
-        <Button x:Name="DeleteCategorie" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" Click="DeleteCategorie_Click" Margin="150 0 0 0" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}">
+        <Button x:Name="DeleteCategorie" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" Click="DeleteCategorie_Click" Margin="250 0 0 0" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}">
             Supprimer
+        </Button>
+        <Button x:Name="Menu" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" Click="Menu_Click" Margin="0 0 0 0" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}">
+            Menu
         </Button>
     </Grid>
 </Page>
