--- a/ApplicationMarcassin/Groupe.xaml
+++ b/ApplicationMarcassin/Groupe.xaml
@@ -5,92 +5,109 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ApplicationMarcassin"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="300"
-      Title="Groupe">
+      d:DesignHeight="700" d:DesignWidth="1200"
+      Title="Groupe"
+      Background="#ecf0f1">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.70*"/>
+            <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.50*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="Création Groupe"/>
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="4" Content="Création groupe" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Foreground="#FCA324"/>
 
         <!--Titre-->
-        <Label Grid.Column="0" Grid.Row="1" Content="Titre : "/>
-        <TextBox Grid.Column="1" Grid.Row="1" Name="Titre" Text="Titre"/>
+        <Label Grid.Column="1" Grid.Row="1" Content="Titre" HorizontalAlignment="Left" Margin="30 10 0 0" FontSize="18" Foreground="#FCA324"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Name="Titre" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0 0 0 10" Height="35" Width="400"/>
 
         <!--Date de la Réunion-->
-        <Label Grid.Column="0" Grid.Row="2" Content="Date de la Réunion : "/>
-        <Calendar Grid.Column="1" Grid.Row="2" Name="Date"/>
+        <Label Grid.Column="1" Grid.Row="5" Content="Date de la Réunion" VerticalAlignment="Center" Margin="40 0 0 0" FontSize="18" Foreground="#FCA324"/>
+        <Calendar Grid.Column="2" Grid.Row="5" Name="Date" Margin="0 20 15 0" Grid.RowSpan="2"/>
 
         <!--Participant-->
 
-        <Label Grid.Column="0" Grid.Row="3" Content="Participant :"/>
-        <Grid Grid.Column="0" Grid.Row="3">
+        <Label Grid.Column="3" Grid.Row="1" Content="Participant" FontSize="18" Margin="10 10 0 0" Foreground="#FCA324"/>
+        <Grid Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.75*"/>
                 <ColumnDefinition Width="0.25*"/>
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" Name="TextRecherche" Text="Rechercher" VerticalAlignment="Center" Margin="0,0,10,0"/>
-            <Button Grid.Column="1" VerticalAlignment="Center" Name="ButtonRecherche" Content="Rechercher" Click="ButtonRecherche_Click" />
+            <TextBox Grid.Column="0" Name="TextRecherche" VerticalAlignment="Bottom" Height="35" Width="330" Margin="0 0 0 10"/>
+            <Button Click="ButtonRecherche_Click" Grid.Column="1" VerticalAlignment="Bottom" Name="ButtonRecherche" Content="Rechercher" Margin="0 30 15 10" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}"/>
         </Grid>
-        <ListView Grid.Column="1" Grid.Row="3" Name="ListViewParticipant">
+        <ListView Grid.Column="3" Grid.Row="2" Name="ListViewParticipant" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="450" Margin="0 25 0 0">
             <ListView.View>
                 <GridView AllowsColumnReorder="true"
                      ColumnHeaderToolTip="Competence Information">
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Nom}" 
-                      Header="Nom" Width="50"/>
+                      Header="Nom" Width="175"/>
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Path=Prenom}" 
-                      Width="50" Header="Prénom"/>
+                      Width="175" Header="Prénom"/>
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Path=Id_Employe}" 
-                      Header="Identifiant" Width="75"/>
+                      Header="Identifiant" Width="100"/>
                 </GridView>
             </ListView.View>
         </ListView>
 
         <!--Tuteur-->
-        <Label Grid.Column="0" Grid.Row="4" Content="Tuteur : "/>
-        <ListBox Grid.Column="1" Grid.Row="4" Name="ListBoxTuteur">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="0"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Column="0" Content="{Binding Prenom}"/>
-                        <Label Grid.Column="1" Content="{Binding Nom}"/>
-                        <Label Grid.Column="3" Content="{Binding Id_Employe}"/>
-                        <Button Click="Button_Click" Grid.Column="2" Content="Supprimer du Groupe"/>
+        <Grid Grid.Column="3" Grid.Row="4" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
+            <!--Tuteur-->
+            <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Liste Actuelle des particpants (veuillez sélectionné un tuteur) :" FontSize="16" Foreground="#FCA324" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20 10 0 0"/>
+            <ListBox Grid.Row="2" Grid.ColumnSpan="2" Name="ListBoxTuteur"  Margin="20 0 20 10">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="0"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Label Grid.Column="0" Content="{Binding Prenom}"/>
+                            <Label Grid.Column="1" Content="{Binding Nom}"/>
+                            <Label Grid.Column="3" Content="{Binding Id_Employe}"/>
+                            <Button Content="Suppression" Click="Button_Click" Grid.Column="2"/>
 
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
 
         <!--Compétence-->
-        <Label Grid.Column="0" Grid.Row="5" Content="Compétence"/>
-        <ListView Grid.Column="1" Grid.Row="5" Name="ListViewCompetence">
+        <Label Grid.Column="1" Grid.Row="2" Content="Compétence" FontSize="18" Foreground="#FCA324" Margin="35 10 0 0"/>
+        <ListView Grid.Column="1" Grid.Row="2" Name="ListViewCompetence" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="20 60 20 30" Width="400">
             <ListView.View>
 
                 <GridView AllowsColumnReorder="true"
@@ -98,19 +115,19 @@
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Annee}" 
-                      Header="Année" Width="50"/>
+                      Header="Année" Width="100"/>
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Path=IntituleCompetence}" 
-                      Width="90" Header="Intitule"/>
+                      Width="200" Header="Intitule"/>
 
                     <GridViewColumn DisplayMemberBinding=
                           "{Binding Path=Id_Competence}" 
-                      Header="Id" Width="25"/>
+                      Header="Id" Width="100"/>
                 </GridView>
 
             </ListView.View>
         </ListView>
-        <Button Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Enregistrer" Click="Enregistrement_Click" Name="Enregistrement"/>
+        <Button Click="Enregistrement_Click" Grid.Column="4" Grid.Row="6" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 0 15 0" Content="Enregistrer" Name="Enregistrement" Height="35" Width="100" FontSize="18" Background="#FCA324" BorderBrush="#ecf0f1" Foreground="White" Style="{StaticResource MyButton}"/>
     </Grid>
 </Page>
